force-app/main/default/objects/Form_LCF_Outcome_Payment_1__c/Form_LCF_Outcome_Payment_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Setup Outcome Payments - 1.0</description>
    <label>Form LCF Outcome Payment 1.0</label>
    <nameField>
        <displayFormat>PAY-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Outcome Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>