force-app/main/default/objects/Form_LCF_Outcome_Payment_1__c/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Form LCF Outcome Payments 1.0</relationshipLabel>
    <relationshipName>outcome_payments</relationshipName>
    <type>Lookup</type>
</CustomField>