force-app/main/default/objects/Form_LCF_Outcome_Payment_1__c/fields/full_award_setup__c.field-meta.xml
<CustomField>
    <fullName>full_award_setup__c</fullName>
    <label>Form LCF Full Award Setup 1.0</label>
    <referenceTo>Form_LCF_Setup_1__c</referenceTo>
    <relationshipLabel>Form LCF Outcome Payments 1.0</relationshipLabel>
    <relationshipName>outcome_payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>