force-app/main/default/objects/Form_LCF_Outcome_Payment_1__c/fields/op_commissioner_payments__c.field-meta.xml
<CustomField>
    <fullName>op_commissioner_payments__c</fullName>
    <description>Only include payments made by commissioners who are making outcome payments to fund your proposal.</description>
    <inlineHelpText>Outcomes payments from commissioners excluding LCF payments</inlineHelpText>
    <label>OP - Commissioner Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>