force-app/main/default/objects/Form_LCF_Outcome_Payment_1__c/fields/op_commissioner_savings__c.field-meta.xml
<CustomField>
    <fullName>op_commissioner_savings__c</fullName>
    <description>Normally, only include savings/benefits made by commissioners who are making outcome payments to fund your proposal. However, if your ONLY savings and costs avoided are from other sources, then please include these.</description>
    <inlineHelpText>Commissioner cashable savings and benefits from costs avoided</inlineHelpText>
    <label>OP - Commissioner Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>