force-app/main/default/objects/Form_LCF_Outcome_Payment_1__c/fields/op_financial_year__c.field-meta.xml
<CustomField>
    <fullName>op_financial_year__c</fullName>
    <description>Note that LCF will only pay outcomes achieved and claimed to the end of September 2024</description>
    <inlineHelpText>Financial Year (April - March)</inlineHelpText>
    <label>OP - Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Years</valueSetName>
    </valueSet>
</CustomField>