force-app/main/default/objects/Form_LCF_Outcome_Payment_1__c/fields/op_lcf_outcome_payments__c.field-meta.xml
<CustomField>
    <fullName>op_lcf_outcome_payments__c</fullName>
    <inlineHelpText>Outcome payments from LCF</inlineHelpText>
    <label>OP - LCF Outcome Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>